force-app/main/default/objects/lightningbuddy__Carousel_Image__c/lightningbuddy__Carousel_Image__c.object-meta.xml
<CustomObject>
    <label>Carousel Image</label>
    <nameField>
        <label>Carousel Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carousel Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>