force-app/main/default/objects/lightningbuddy__Carousel_Image__c/fields/lightningbuddy__Description__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>