force-app/main/default/objects/lightningbuddy__Carousel_Image__c/fields/lightningbuddy__Image_Url__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Image_Url__c</fullName>
    <label>Image Url</label>
    <type>TextArea</type>
</CustomField>